@startuml

class Program {
  +Main()
}

class MainMenuForm {
  +MainMenuForm()
  -StartButton_Click()
  -InstructionsButton_Click()
}

class Form1 {
  -playerHealth : int
  -enemyHealth : int
  -wins : int
  -losses : int
  -isPaused : bool
  -isGameOver : bool
  +Form1()
  -BoxerAttackTImerEvent()
  -BoxerMoveTimerEvent()
  -KeyIsDown()
  -KeyIsUp()
  -TogglePause()
  -TriggerGameOver()
  -ResetGame()
}

class InstructionsForm {
  +InstructionsForm()
}

class GameOverForm {
  +SelectedAction : GameOverAction
  +GameOverForm(resultText : string, wins : int, losses : int)
}

enum GameOverAction {
  Restart
  Menu
}

Program --> MainMenuForm : abre
MainMenuForm --> Form1 : inicia jogo
MainMenuForm --> InstructionsForm : mostra
Form1 --> GameOverForm : fim de jogo
GameOverForm --> GameOverAction

@enduml
